boltffi_backend/tests/snapshots/swift__swift_target_renders_async_callback_unit_results.snap
---
source: boltffi_backend/tests/swift.rs
expression: rendered
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public enum LoadError: Int32, Hashable, Sendable, CaseIterable, Error {
    case bad = 1

    @usableFromInline init(fromC c: Int32) {
        self = LoadError(rawValue: c)!
    }

    @usableFromInline var cValue: Int32 {
        rawValue
    }
}

public protocol Listener: AnyObject {
    func remove(key: UInt32) async throws
}

private final class ListenerWrapper {
    let impl: Listener

    init(_ impl: Listener) {
        self.impl = impl
    }
}

private var boltffiListenerVtable: ___ListenerVTable = {
    ___ListenerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        remove: { handle, key, completion, completionContext in
            guard handle != 0 else { completion?(completionContext, FfiStatus(code: 1), FfiBuf_u8()); return }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            _Concurrency.Task {
                do {
                    try await wrapper.impl.remove(key: key)
                    completion?(completionContext, FfiStatus(code: 0), FfiBuf_u8())
                } catch let error as LoadError {
                    let boltffiErrorBytes = boltffiEncode { boltffiErrorWriter in boltffiErrorWriter.writeI32(error.rawValue) }
                    boltffiErrorBytes.withUnsafeBufferPointer { boltffiErrorBuffer in
                        completion?(completionContext, FfiStatus(code: 1), boltffi_buf_from_bytes(boltffiErrorBuffer.baseAddress, UInt(boltffiErrorBuffer.count)))
                    }
                } catch {
                    completion?(completionContext, FfiStatus(code: 1), boltffiEncodeUnexpectedCallbackError(error))
                }
            }
        }
    )
}()

private enum ListenerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_listener(&boltffiListenerVtable)
    }()

    static func create(_ impl: Listener) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = ListenerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_listener(handle)
    }
}
