boltffi_backend/tests/snapshots/swift__swift_target_renders_async_class_methods.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/async_class_methods\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public final class Engine {
    private var __boltffiHandle: UInt64 = 0

    @usableFromInline var handle: UInt64 {
        get { withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_load($0)) } }
        set { __boltffiHandle = UInt64(newValue) }
    }

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    @usableFromInline func __boltffiTakeHandle() -> UInt64 {
        withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_exchange($0, 0)) }
    }

    deinit {
        let handle = __boltffiTakeHandle()
        if handle != 0 { boltffi_release_class_demo_engine(handle) }
    }

    public init() {
        self.handle = boltffi_init_class_demo_engine_new()
    }

    public func compute(value: UInt32) async throws -> UInt32 {
        let boltffiFuture = boltffi_method_class_demo_engine_compute(self.handle, value)
        return try await boltffiAsyncCall(
            futureHandle: boltffiFuture,
            poll: boltffi_async_method_class_demo_engine_compute_poll,
            cancel: boltffi_async_method_class_demo_engine_compute_cancel,
            free: boltffi_async_method_class_demo_engine_compute_free
        ) { boltffiFuture, boltffiStatus in
            let boltffiResult = boltffi_async_method_class_demo_engine_compute_complete(boltffiFuture, boltffiStatus)
            let boltffiStatusCode = boltffiStatus!.pointee.code
            guard boltffiStatusCode == 0 else {
                throw FfiError(message: "FFI failed in async completion with code \(boltffiStatusCode)")
            }
            return boltffiResult
        }
    }
}
