boltffi_backend/tests/snapshots/swift__swift_target_renders_async_complete_return_shapes.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_source(SourceFixture::many([\"records/person\",\n\"exports/async_complete_return_shapes\",]))"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Person: Hashable, Equatable, Sendable {
    public var name: String
    public var `repeat`: String

    public init(name: String, `repeat`: String) {
        self.name = name
        self.`repeat` = `repeat`
    }

    @inlinable static func decode(from reader: inout WireReader) -> Person {
        Person(name: reader.readString(), repeat: reader.readString())
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeString(self.name)
        writer.writeString(self.`repeat`)
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Int32
    public var y: Int32

    public init(x: Int32, y: Int32) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public enum SaveError: Int32, Hashable, Sendable, CaseIterable, Error {
    case failed = 0

    @usableFromInline init(fromC c: Int32) {
        self = SaveError(rawValue: c)!
    }

    @usableFromInline var cValue: Int32 {
        rawValue
    }
}

public func refresh() async throws {
    let boltffiFuture = boltffi_function_demo_refresh()
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_refresh_poll,
        cancel: boltffi_async_function_demo_refresh_cancel,
        free: boltffi_async_function_demo_refresh_free
    ) { boltffiFuture, boltffiStatus in
        boltffi_async_function_demo_refresh_complete(boltffiFuture, boltffiStatus)
        let boltffiStatusCode = boltffiStatus!.pointee.code
        guard boltffiStatusCode == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatusCode)")
        }
    }
}

public func loadName() async throws -> String {
    let boltffiFuture = boltffi_function_demo_load_name()
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_load_name_poll,
        cancel: boltffi_async_function_demo_load_name_cancel,
        free: boltffi_async_function_demo_load_name_free
    ) { boltffiFuture, boltffiStatus in
        let boltffiResult = boltffi_async_function_demo_load_name_complete(boltffiFuture, boltffiStatus)
        let boltffiStatusCode = boltffiStatus!.pointee.code
        guard boltffiStatusCode == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatusCode)")
        }
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
    }
}

public func loadPoint() async throws -> Point {
    let boltffiFuture = boltffi_function_demo_load_point()
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_load_point_poll,
        cancel: boltffi_async_function_demo_load_point_cancel,
        free: boltffi_async_function_demo_load_point_free
    ) { boltffiFuture, boltffiStatus in
        let boltffiResult = boltffi_async_function_demo_load_point_complete(boltffiFuture, boltffiStatus)
        let boltffiStatusCode = boltffiStatus!.pointee.code
        guard boltffiStatusCode == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatusCode)")
        }
        return Point(fromC: boltffiResult)
    }
}

public func save() async throws {
    let boltffiFuture = boltffi_function_demo_save()
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_save_poll,
        cancel: boltffi_async_function_demo_save_cancel,
        free: boltffi_async_function_demo_save_free
    ) { boltffiFuture, boltffiStatus in
        let boltffiError = boltffi_async_function_demo_save_complete(boltffiFuture, boltffiStatus)
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in SaveError(rawValue: boltffiErrorReader.readI32())! }
        }
        let boltffiStatusCode = boltffiStatus!.pointee.code
        guard boltffiStatusCode == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatusCode)")
        }
    }
}

public func saveChecked(value: Int32) async throws -> Int32 {
    let boltffiFuture = boltffi_function_demo_save_checked(value)
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_save_checked_poll,
        cancel: boltffi_async_function_demo_save_checked_cancel,
        free: boltffi_async_function_demo_save_checked_free
    ) { boltffiFuture, boltffiStatus in
        var boltffiResult: Int32 = Int32()
        let boltffiError = boltffi_async_function_demo_save_checked_complete(boltffiFuture, boltffiStatus, &boltffiResult)
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in SaveError(rawValue: boltffiErrorReader.readI32())! }
        }
        let boltffiStatusCode = boltffiStatus!.pointee.code
        guard boltffiStatusCode == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatusCode)")
        }
        return boltffiResult
    }
}
