boltffi_backend/tests/snapshots/swift__swift_target_renders_builtin_values_through_shared_codec.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/builtin_functions\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func echoDuration(value: Double) -> Double {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeDuration(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_echo_duration(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readDuration() }
    }
}

public func makeDuration(seconds: UInt64, nanos: UInt32) -> Double {
    let boltffiResult = boltffi_function_demo_make_duration(seconds, nanos)
    defer { boltffi_free_buf(boltffiResult) }
    return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readDuration() }
}

public func durationAsMillis(value: Double) -> UInt64 {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeDuration(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        return boltffi_function_demo_duration_as_millis(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
    }
}

public func echoSystemTime(value: Date) -> Date {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeTimestamp(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_echo_system_time(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readTimestamp() }
    }
}

public func systemTimeToMillis(value: Date) -> UInt64 {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeTimestamp(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        return boltffi_function_demo_system_time_to_millis(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
    }
}

public func millisToSystemTime(value: UInt64) -> Date {
    let boltffiResult = boltffi_function_demo_millis_to_system_time(value)
    defer { boltffi_free_buf(boltffiResult) }
    return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readTimestamp() }
}

public func echoUuid(value: UUID) -> UUID {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeUuid(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_echo_uuid(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readUuid() }
    }
}

public func uuidToString(value: UUID) -> String {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeUuid(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_uuid_to_string(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
    }
}

public func echoUrl(value: URL) -> URL {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeUrl(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_echo_url(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readUrl() }
    }
}

public func urlToString(value: URL) -> String {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeUrl(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_url_to_string(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
    }
}
