boltffi_backend/tests/snapshots/swift__swift_target_renders_callback_direct_result_returns.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_status_result\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol StatusMapper: AnyObject {
    func mapStatus(status: Int32) throws -> Int32
}

private final class StatusMapperWrapper {
    let impl: StatusMapper

    init(_ impl: StatusMapper) {
        self.impl = impl
    }
}

private var boltffiStatusMapperVtable: ___StatusMapperVTable = {
    ___StatusMapperVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        map_status: { handle, return_out, status in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            do {
                let boltffiResult = try wrapper.impl.mapStatus(status: status)
                return_out?.pointee = boltffiResult
                return FfiBuf_u8()
            } catch {
                let boltffiErrorBytes = boltffiEncode { boltffiErrorWriter in boltffiErrorWriter.writeString((error as? FfiError)?.message ?? String(describing: error)) }
                return boltffiErrorBytes.withUnsafeBufferPointer { boltffiErrorBuffer in
                    boltffi_buf_from_bytes(boltffiErrorBuffer.baseAddress, UInt(boltffiErrorBuffer.count))
                }
            }
        }
    )
}()

private enum StatusMapperBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_status_mapper(&boltffiStatusMapperVtable)
    }()

    static func create(_ impl: StatusMapper) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = StatusMapperWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_status_mapper(handle)
    }
}
