boltffi_backend/tests/snapshots/swift__swift_target_renders_callback_encoded_result_returns.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_encoded_status_result\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol MessageMapper: AnyObject {
    func mapMessage(key: Int32) throws -> String
}

private final class MessageMapperWrapper {
    let impl: MessageMapper

    init(_ impl: MessageMapper) {
        self.impl = impl
    }
}

private var boltffiMessageMapperVtable: ___MessageMapperVTable = {
    ___MessageMapperVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<MessageMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<MessageMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        map_message: { handle, return_out, key in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<MessageMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            do {
                let boltffiResult = try wrapper.impl.mapMessage(key: key)
                let boltffiResultBytes = boltffiEncode { boltffiResultWriter in boltffiResultWriter.writeString(boltffiResult) }
                boltffiResultBytes.withUnsafeBufferPointer { boltffiResultBuffer in
                    return_out?.pointee = boltffi_buf_from_bytes(boltffiResultBuffer.baseAddress, UInt(boltffiResultBuffer.count))
                }
                return FfiBuf_u8()
            } catch {
                let boltffiErrorBytes = boltffiEncode { boltffiErrorWriter in boltffiErrorWriter.writeString((error as? FfiError)?.message ?? String(describing: error)) }
                return boltffiErrorBytes.withUnsafeBufferPointer { boltffiErrorBuffer in
                    boltffi_buf_from_bytes(boltffiErrorBuffer.baseAddress, UInt(boltffiErrorBuffer.count))
                }
            }
        }
    )
}()

private enum MessageMapperBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_message_mapper(&boltffiMessageMapperVtable)
    }()

    static func create(_ impl: MessageMapper) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = MessageMapperWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_message_mapper(handle)
    }
}
