boltffi_backend/tests/snapshots/swift__swift_target_renders_callback_encoded_returns.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_encoded_return\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol Listener: AnyObject {
    func name() -> String
}

private final class ListenerWrapper {
    let impl: Listener

    init(_ impl: Listener) {
        self.impl = impl
    }
}

private var boltffiListenerVtable: ___ListenerVTable = {
    ___ListenerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        name: { handle in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            let boltffiResult = wrapper.impl.name()
            let boltffiResultBytes = boltffiEncode { boltffiResultWriter in boltffiResultWriter.writeString(boltffiResult) }
            return boltffiResultBytes.withUnsafeBufferPointer { boltffiResultBuffer in
                boltffi_buf_from_bytes(boltffiResultBuffer.baseAddress, UInt(boltffiResultBuffer.count))
            }
        }
    )
}()

private enum ListenerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_listener(&boltffiListenerVtable)
    }()

    static func create(_ impl: Listener) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = ListenerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_listener(handle)
    }
}
